--- a/index.html
+++ b/index.html
@@ -379,6 +379,26 @@ regional/country requests. Please get in touch with us at on our <a
 href="https://groups.google.com/g/malaria-atlas-project-introduction-to-spatial-analysis">GoogleGroup</a></p>
 <hr />
 <p><br></p>
+<div id="download-the-data" class="section level2">
+<h2>Download the data</h2>
+<p>All data for this workshop will be available on a USB stick provided
+in attendance. The data can also be found in advance of the training in
+a <a
+href="https://drive.google.com/drive/folders/16KTr5tKvE73GibDDWxWa1RuOAJRF7ZPS?usp=sharing">GoogleDrive</a>
+folder.</p>
+<div id="about-the-data" class="section level3">
+<h3>About the data</h3>
+<p><br></p>
+</div>
+</div>
+<div id="notes" class="section level2">
+<h2>Notes</h2>
+<p>We have set up a <a
+href="https://docs.google.com/document/d/149gRP2qhoIQiKRW_Z8JA1vWfhUKQBmu0Fn45m3XK2WI/edit">Googledoc</a>
+where we will put all the R scripts and notes we make during the
+workshop</p>
+<p><br></p>
+</div>
 <div id="preparations" class="section level2">
 <h2>Preparations</h2>
 <p>This workshops is expected to be hands-on, and to follow this lessons
@@ -589,15 +609,6 @@ have used for a given project and makes it straightforward to reinstall
 those exact package version in a new environment, for example after
 updating your R version or on another computer. However, the details are
 outside of the scope of this lesson.</p>
-<p><br></p>
-</div>
-<div id="download-the-data" class="section level3">
-<h3>Download the data</h3>
-<p>All data for this workshop will be available on a USB stick provided
-in attendance. The data can also be found in advance of the training in
-a <a
-href="https://drive.google.com/drive/folders/16KTr5tKvE73GibDDWxWa1RuOAJRF7ZPS?usp=sharing">GoogleDrive</a>
-folder.</p>
 </div>
 </div>
 
